--- a/research/experiment.ipynb
+++ b/research/experiment.ipynb
@@ -33,8 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PINECONE_API_KEY = \"068e5cfc-8376-4902-a3b2-3178999a11cc\"\n",
-    "PINECONE_API_ENV = \"gcp-starter\""
+    "PINECONE_API_KEY = \"Pinecone api key\"\n",
+    "PINECONE_API_ENV = \"pinecone env key\""
    ]
   },
   {
